# programmiersprachen-raytracer

./: .gitignore  CMakeLists.txt  RayTracingNotes.md  notes.md  scenes.md
framework/: box.cpp  box.hpp  camera.hpp  color.hpp  composite.cpp  composite.hpp  fov.hpp  hit_point.hpp  light.hpp  material.hpp  ray.hpp  render_information.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
resources/: materials.sdf  scene.sdf  scene_3_reflection.sdf  scene_animation.sdf  scene_aufgabeblatt.sdf  scene_composite.sdf  scene_light_fix.sdf  scene_refraction.sdf  scene_refraction_2.sdf  scene_refraction_3.sdf  scene_test_camera_matrix.sdf
source/: CMakeLists.txt  animation.cpp  fileload.cpp  loadScene.cpp  presentation.cpp  presentation_refraction.cpp  raytracer.cpp  tests.cpp
tests/: CMakeLists.txt  main.cpp  scene_tests.cpp
